--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hono_memo",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "clean": "rimraf dist",
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "build": "npm run clean && tsc",
-    "start": "npm run build && cross-env NODE_ENV=production node dist/index.js"
+    "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
+    "start:vercel": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.3",
@@ -13,17 +14,19 @@
     "class-transformer": "^0.5.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
-    "hono": "^4.7.10",
+    "hono": "^4.7.11",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
+    "tsx": "^4.20.3",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
-    "@types/node": "^20.17.52",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.19.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
 }
